src/objects/ADvendio__Quote_Preference__c.object
<CustomObject>
    <description>This object stores generic templates with all settings to generate your Quote PDFs. Make sure that always one record is active to use the &quot;create Quote document&quot; feature. With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked these preference settings will be used to generate your quotes. Only one setting can be set to &quot;active&quot; at same time.</description>
        <inlineHelpText>If you tick this check box, these quote preferences will be applied by the proposal generator.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AddressBlock1stPage__c</fullName>
        <label>Address Block (1st Page)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ColorCodeTableHeader__c</fullName>
        <description>Please insert the background color for your table headers in Hex Format if desired. Example: #C6CEE2.</description>
        <label>Color Hex Code (Table Header)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ColorCode__c</fullName>
        <defaultValue>&quot;#C6CEE2&quot;</defaultValue>
        <description>Please insert a background color for your entire quote in Hex Format if desired. Example: #C6CEE2.</description>
        <inlineHelpText>Please insert a background color for your proposal. Format: #C6CEE2</inlineHelpText>
        <label>Color Hex Code (Background)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactInformation2ndPage__c</fullName>
        <label>Contact Information (2nd Page)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Creative__c</fullName>
        <label>Creative (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DisablePageBreakBeforeTextBlocks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked all Page Breaks before Text Blocks getting ignored.</description>
        <label>Disable Page Break before Text Blocks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__FirstPageAddressInformation__c</fullName>
        <description>Please enter the API-Name of a CustomLabel. The value will be displayed on the first page at the Quote-PDF. If not defined, the default Custom Label with name &quot;First_page_my_address&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value will be displayed on the first page at the Quote-PDF. If not defined, the default Custom Label with name &quot;First_page_my_address&quot; will be used.</inlineHelpText>
        <label>First Page Address Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterFullSizeData__c</fullName>
        <description>Stores the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the footer full width on the Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_additional_information&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the footer
full width on the Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_additional_information&quot; will be used.</inlineHelpText>
        <label>Footer Full Size Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterLeftSideData__c</fullName>
        <description>Stores the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the left side of footer of Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_left_side&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the left side of footer of Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_left_side&quot; will be used.</inlineHelpText>
        <label>Footer Left Side Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterMiddleData__c</fullName>
        <description>Stores the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the middle of footer of Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_middle&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the middle of footer of Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_middle&quot; will be used.</inlineHelpText>
        <label>Footer Middle Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterRightSideData__c</fullName>
        <description>Stores the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the right side of footer of Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_right_side&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the right side of footer of Quote-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_right_side&quot; will be used.</inlineHelpText>
        <label>Footer Right Side Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HiddenPackageComponentFields__c</fullName>
        <description>Please enter here a line-separated list of fields which you wish not to display for package components.</description>
        <inlineHelpText>A newline-separated list of fields which are not displayed for package components.</inlineHelpText>
        <label>Hide Package Component Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideAddFees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the additional fees are not printed on the summary page.</description>
        <label>Hide additional fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideBoxNotesAlways__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Notes are not printed on the summary page.</description>
        <label>Hide Notes Box - always</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideBoxNotesNull__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Notes box is not printed on the summary page if empty.</description>
        <label>Hide Notes Box - if empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideBoxTechnicalSpecifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Technical Specifications are not printed on the summary page.</description>
        <label>Hide Box (Technical Specifications)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideInfoTable1stPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the info table on the cover letter is not shown.</description>
        <label>Hide Info Table (Cover Letter)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HidePackageComponentDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked detailed information about package components will not be displayed.</description>
        <inlineHelpText>If checked detailed information about package components will not be displayed.</inlineHelpText>
        <label>Hide Package Component Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__InfoTableCoverLetter__c</fullName>
        <description>This field defines the information table that is displayed on the cover letter of the PDF and in which order the information is displayed.</description>
        <inlineHelpText>Please customize the information table on the cover letter of the PDF and in which order the information is displayed or use the ADvendio default.</inlineHelpText>
        <label>Info Table (Cover Letter)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__LeftHeaderImageOnlyOnFirstPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image only on the cover letter of all Quote types.</description>
        <label>Left Header Image only on First Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__LeftHeaderImageSource__c</fullName>
        <description>Please reference the Salesforce path of the the custom rich text field which stores the image to be displayed. Example: ADvendio__Agency__r.Logo__c.</description>
        <inlineHelpText>Please enter the fieldpath with start at media campaign to the custom rich text field which contains the image. Sample: ADvendio__Agency__r.Barcode__c</inlineHelpText>
        <label>Left Header Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Logo_Image__c</fullName>
        <description>The logo will be saved in this field.</description>
        <formula>IF(ADvendio__logo__c &lt;&gt;&apos;&apos;, IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+ADvendio__logo__c, &apos;Logo&apos; ,50,70) ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The logo will be saved in this field.</inlineHelpText>
        <label>Logo Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Logo_Name__c</fullName>
        <description>Shows the selected logo file name.</description>
        <inlineHelpText>This field displays the name of the logo.</inlineHelpText>
        <label>Logo file name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaxLineNumFirstPage__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Max Line No. (First Page) (deprecated)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaxLineNumOtherPages__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Max Line No. (Other Pages) (deprecated)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaxRowLengthAdType__c</fullName>
        <description>Define the maximum number of characters for each row within the column &quot;Ad Type&quot;.</description>
        <inlineHelpText>Define the maximum number of characters for each row within the column &quot;Ad Type&quot;.</inlineHelpText>
        <label>Max Row Length (AdType) (deprecated)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaxRowLengthPlacement__c</fullName>
        <description>Define the maximum number of characters for each row within the column &quot;Placement&quot;.</description>
        <inlineHelpText>Define the maximum number of characters for each row within the column &quot;Placement&quot;.</inlineHelpText>
        <label>Max Row Length (Placement) (deprecated)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaxRowLengthSite__c</fullName>
        <description>Define the maximum number of characters for each row within the column &quot;Site&quot;.</description>
        <inlineHelpText>Define the maximum number of characters for each row within the column &quot;Site&quot;.</inlineHelpText>
        <label>Max Row Length (Site) (deprecated)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__RightHeaderImageSource__c</fullName>
        <description>Please reference the Salesforce path of the the custom rich text field which stores the image to be displayed. Example: ADvendio__Agency__r.Logo__c.</description>
        <label>Right Header Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowGross_Campaign_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Gross Amount is shown on cover letter and summarization on page 3.</description>
        <inlineHelpText>If you tick this check box, gross campaign costs will be displayed on the proposal.</inlineHelpText>
        <label>Show Gross Campaign Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLeftHeaderImageOnCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image if Quote type is a Cancellation.</description>
        <label>Show Left Header Image on Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLeftHeaderImageOnOrderConfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image if Quote type is an Order Confirmation.</description>
        <label>Show Left Header Image OrderConfirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLeftHeaderImageOnOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image if Quote type is an Proposal.</description>
        <label>Show Left Header Image on Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockAfterTextBlocks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block below text blocks.</description>
        <label>Show Signature Block below Text Blocks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockOnCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block if Quote type is a Cancellation.</description>
        <label>Show Signature Block on Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockOnOrderConfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block if Quote type is an Order Confirmation.</description>
        <label>Show Signature Block OrderConfirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockOnOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block if Quote type is an Proposal.</description>
        <label>Show Signature Block on Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowTitle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you tick this check box, the title will be displayed on the proposal.</description>
        <inlineHelpText>If you tick this check box, the title will be displayed on the proposal.</inlineHelpText>
        <label>ShowTitle (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Discounted_campaign_costs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you check this check box, discounted campaign costs will be displayed on the proposal.</description>
        <inlineHelpText>If you tick this check box, discounted campaign costs will be displayed on the proposal.</inlineHelpText>
        <label>Show dis. Campaign Costs (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Net_campaign_costs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked net campaign costs will be displayed on the proposal.</description>
        <inlineHelpText>If you tick this check box, net campaign costs will be displayed on the proposal.</inlineHelpText>
        <label>Show Net Campaign Costs (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Terms_and_Conditions__c</fullName>
        <description>Enter your terms and conditions here.</description>
        <inlineHelpText>Enter your terms and conditions here.</inlineHelpText>
        <label>Terms and Conditions (deprecated)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__Title__c</fullName>
        <description>Enter a title.</description>
        <inlineHelpText>Enter a title.</inlineHelpText>
        <label>Title (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Volume_Scale_of_Discounts_last_year__c</fullName>
        <label>Volume Discount Scale last year</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Volume_Scale_of_Discounts_next_year__c</fullName>
        <label>Volume Discount Scale next year</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Volume_scales_of_discount__c</fullName>
        <description>Please enter line-separated list like the following: 

(Amount, Percentage
Amount 2, Percentage 2 ...). 

This will be shown on the Quote document.</description>
        <inlineHelpText>Enter the information of volume scales of discount in the following manner: (amount, percentage).</inlineHelpText>
        <label>Volume discount scale</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__footer__c</fullName>
        <description>Enter a text for the footer.</description>
        <inlineHelpText>Enter a text for the footer.</inlineHelpText>
        <label>Footer (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__logo__c</fullName>
        <description>Displays the Salesforce ID of your selected logo file.</description>
        <inlineHelpText>Upload an image to be used as your company logo.</inlineHelpText>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__showFooter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you tick this check box, the footer will be displayed on the proposal.</description>
        <inlineHelpText>If you tick this check box, the footer will be displayed on the proposal.</inlineHelpText>
        <label>Show Footer (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__showLogo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected your logo is shown on the quote.</description>
        <inlineHelpText>If you tick this check box, the logo will be displayed on the proposal.</inlineHelpText>
        <label>Show Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__showPaymentTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you tick this check box, payment terms will be displayed on the proposal.</description>
        <inlineHelpText>If you tick this check box, payment terms will be displayed on the proposal.</inlineHelpText>
        <label>Show Payment Terms (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__show_1st_page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the first page which summarizes all information of the the quote is displayed and created - (Cover letter)</description>
        <inlineHelpText>Tick this checkbox to display the „1st page“ on the proposal. The first page contains a short summary of all relevant data.</inlineHelpText>
        <label>Show Cover Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Quote Preference</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Preferences</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__Quote_Layout_1</fullName>
        <active>true</active>
        <description>Quote layout in generic portrait format</description>
        <label>Generic portrait format (deprecated)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__Standard_Quote</fullName>
        <active>true</active>
        <description>Quote layout in German OVK standard</description>
        <label>German standard layout (OVK) (deprecated)</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>